Add html basic structure and basic body styles

--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- font awesome and google links -->
+    <script src="https://kit.fontawesome.com/73b211bde3.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto:wght@300;400&display=swap"
+    rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 class="heading">
+        <img class="dice-logo" src="assets/images/die.png" alt="dice logo">  Try Your Luck Dice Game
+    </h1>
+
+    <div class="game-area">
+        <div id="display-result"></div>
+        <div id="player-area"></div>
+        <div id="computer-area"></div>
+    </div>
+    <button id="roll-dice"></button>
+
 
     <script src="assets/js/script.js"></script>
 </body>
