Add basic styles to game area and button

--- a/index.html
+++ b/index.html
@@ -15,15 +15,21 @@
 </head>
 <body>
     <h1 class="heading">
-        <img class="dice-logo" src="assets/images/die.png" alt="dice logo">  Try Your Luck Dice Game
+        <img class="dice-logo" src="assets/images/dice.png" alt="dice logo">  Try Your Luck Dice Game
     </h1>
-
+    
     <div class="game-area">
-        <div id="display-result"></div>
-        <div id="player-area"></div>
-        <div id="computer-area"></div>
+        <div id="display-result">Display Result Here!</div>
+        <div id="player-area">
+            <span><i class="fa-solid fa-user-large"></i> The Player</span>
+           
+        </div>
+        <p id="versus">vs</p>
+        <div id="computer-area">
+            <span><i class="fa-solid fa-desktop"></i> The Computer</span>
+        </div>
     </div>
-    <button id="roll-dice"></button>
+    <button id="roll-dice">Roll the dice</button>
 
 
     <script src="assets/js/script.js"></script>
