Assign DOM elements selectors and create  rollDice function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="game-area">
         <div id="display-result">Display Result Here!</div>
         <div id="player-area">
-            <span><i class="fa-solid fa-user-large"></i> The Player</span>
+            <span><i class="fa-solid fa-user-large" id="pers-img"></i> The Player</span>
            
         </div>
         <p id="versus">vs</p>
@@ -29,7 +29,7 @@
             <span><i class="fa-solid fa-desktop"></i> The Computer</span>
         </div>
     </div>
-    <button id="roll-dice">Roll the dice</button>
+    <button type="button" id="roll-dice">Roll the dice</button>
 
 
     <script src="assets/js/script.js"></script>
