Add text content and screenshots to README.md file

--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/73b211bde3.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto:wght@300;400&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Try your luck dice game</title>
 </head>
+
 <body>
     <h1 class="heading">
-        <img class="dice-logo" src="assets/images/dice.png" alt="dice logo">  Try Your Luck Dice Game
+        <img class="dice-logo" src="assets/images/dice.png" alt="dice logo"> Try Your Luck Dice Game
     </h1>
-    
+
     <div class="game-area">
         <div id="display-area">
-            <h2 id="display-text">Hello player</h2>
+            <h2 id="display-text">Hello player roll the dice and start the game!</h2>
             <div id="player-area">
             </div>
             <p id="versus">vs</p>
-             <div id="computer-area"></div>   
+            <div id="computer-area"></div>
         </div>
     </div>
 
@@ -30,4 +32,5 @@
 
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
